<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical"
    android:weightSum="10"
    android:id="@+id/View_LinearLayout"
   >

    <!-- LOGO -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:layout_weight="2">
        <ImageView
            android:src="@drawable/logo"
            android:layout_width="@dimen/login_width_logo"
            android:layout_height="@dimen/login_height_logo" />
    </LinearLayout>

    <!--From Login 5-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:orientation="vertical"
        android:gravity="center"
        >

        <!--Label-->

        <TextView
        android:id="@+id/forgot_tv_timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:textStyle="bold" />
        <TextView
            android:id="@+id/forgot_tv_email"
            android:text="@string/forgot_label"
            android:textSize="@dimen/forgot_size_label"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/forgot_edt_email"
            android:layout_width="@dimen/forgot_width_edt"
            android:layout_height="@dimen/forgot_height_edt" />

        <EditText
            android:id="@+id/forgot_edt_code"
            android:hint="Code"
            android:layout_width="@dimen/forgot_width_edt"
            android:layout_height="@dimen/forgot_height_edt" />

        <EditText
            android:id="@+id/forgot_edt_password"
            android:hint="Update password"
            android:layout_width="@dimen/forgot_width_edt"
            android:layout_height="@dimen/forgot_height_edt" />

        <ProgressBar
        android:id="@+id/progress"
        style="@style/Base.Widget.AppCompat.ProgressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:indeterminate="true"
        android:visibility="invisible" />

    <!--Button Login-->
        <Button
            android:id="@+id/forgot_btn_confirm"
            android:text="@string/forgot_txt_btn_login"
            android:layout_width="@dimen/login_width_edt"
            android:layout_height="@dimen/login_height_edt"
            />

    </LinearLayout>

    <!--Don't have an account and register 0.5-->
    <LinearLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:text="@string/forgot_have_an_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/forgot_btn_move_to_login"
            android:text="@string/forgot_u_login"
            android:layout_marginLeft="@dimen/login_marginLeft_txt_register"
            android:clickable="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>